# robo-dojo

./: .gitignore  CITATION.bib  CITATION.cff  DATA_COLLECTION.md  Dockerfile  FINAL_STATUS.md  LICENSE  Makefile  README.md  STATUS.md  TRAINING_GUIDE.md  USER_GUIDE.md  docker-compose.yml  extract_weights_simple.py  patch_bot_state.py  pip.ini  pyproject.toml  requirements.txt  start_data_collection.sh  start_sim.sh
.agent/workflows/: serve.md  smoke-test.md  train.md
config/: main.yaml
config/env/: robocode.yaml
config/hardware/: standard.yaml
config/training/: ppo.yaml
sample_bots/Corners/: Corners.cmd  Corners.sh
sample_bots/Crazy/: Crazy.cmd  Crazy.sh
sample_bots/Fire/: Fire.cmd  Fire.sh
sample_bots/MyFirstBot/: MyFirstBot.cmd  MyFirstBot.sh
sample_bots/MyFirstDroid/: MyFirstDroid.cmd  MyFirstDroid.sh
sample_bots/MyFirstLeader/: MyFirstLeader.cmd  MyFirstLeader.sh
sample_bots/PaintingBot/: PaintingBot.cmd  PaintingBot.sh
sample_bots/RamFire/: RamFire.cmd  RamFire.sh
sample_bots/SpinBot/: SpinBot.cmd  SpinBot.sh
sample_bots/TrackFire/: TrackFire.cmd  TrackFire.sh
sample_bots/VelocityBot/: VelocityBot.cmd  VelocityBot.sh
sample_bots/Walls/: Walls.cmd  Walls.sh
scripts/: gui_wrapper.sh
src/: aggregate_data.py  collect_data.py  train.py
src/bots/: bot_state_patch.py  noop_bot.py  patched_spin.py  patched_target.py  simple_spin.py  simple_target.py  spin_bot.py  walls_bot.py
src/env/: gym_bot.py  opponent_manager.py  robocode_controller.py  robocode_env.py  video_capture.py
tests/: test_opponent_rotation.py  test_video_capture.py
(+7 files in other folders)
